--- a/SunFinder/app/src/main/res/values/strings.xml
+++ b/SunFinder/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SunFinder</string>
+    <string name="title_geo_list">SunFinder - Choose Point of Interest</string>
+    <string name="title_location_list">SunFinder - Choose Web Cam</string>
     <string name="title_location_detail">Location Detail</string>
 </resources>
