--- a/SunFinder/app/src/main/res/values/strings.xml
+++ b/SunFinder/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">SunFinder</string>
-    <string name="title_geo_list">SunFinder - Choose Point of Interest</string>
-    <string name="title_location_list">SunFinder - Choose Web Cam</string>
-    <string name="title_location_detail">Location Detail</string>
+    <string name="geo_list_title">SunFinder - Point of Interest</string>
+    <string name="location_list_title">SunFinder - Locations</string>
+    <string name="location_detail_title">SunFinder - Location</string>
+    <string name="action_search">Submit to search, type to filter</string>
+    <string name="action_filter">Type to filter</string>
 </resources>
